# amadeus-nova-ai-poc

./: .gitignore  ANALYSIS.md  Cargo.toml  GKR_PERFORMANCE_ANALYSIS.md  GKR_RESULTS.md  GKR_SECURITY_ANALYSIS.md  GKR_TIMING_ANALYSIS.md  README.md  SECURITY.md  SECURITY_FIX_REPORT.md  VERIFICATION_SUCCESS.md  batch.json  benchmark_results.csv  circuit_analyzer.rs  comprehensive_benchmark.csv  gkr_comparison.csv  plot_results.py  production_benchmark.csv  production_scale_benchmark.csv  run_inference.sh
.cargo/: config.toml
.github/workflows/: benchmark.yml
aggregator/: Cargo.toml
aggregator/src/: main.rs
benchmark_plots/: benchmark_summary.txt  performance_report.md
circuit/: Cargo.toml
circuit/src/: compressed.rs  debug_test.rs  lib.rs  minimal_test.rs
circuit/src/tests/: debug_test.rs  minimal_test.rs  mod.rs
cuda_poc/: Cargo.toml  README.md  rust-toolchain.toml
cuda_poc/examples/: demo.rs  large_benchmark.rs  stress_test.rs
cuda_poc/src/: lib.rs
data/: sample.json
engine/: Cargo.toml
engine/src/: commitment.rs  freivalds.rs  gemv.rs  lib.rs
expander_matrix_poc/: Cargo.toml  README.md
expander_matrix_poc/benches/: matrix_proof_bench.rs
expander_matrix_poc/examples/: matrix_proof_demo.rs  security_comparison.rs
expander_matrix_poc/src/: circuit.rs  config.rs  lib.rs  prover.rs  security_tests.rs  types.rs  verifier.rs
legacy_matrix_poc/: Cargo.toml  README.md
legacy_matrix_poc/src/: gkr.rs  main.rs
legacy_matrix_poc/zk_gkr/: Cargo.toml  REMOVED.md
legacy_matrix_poc/zk_gkr/benches/: gkr_bench.rs
legacy_matrix_poc/zk_gkr/src/: mle.rs  transcript.rs
nova_poc/: Cargo.toml
nova_poc/src/: cli.rs  demo.rs  formats.rs  gkr.rs  infer.rs  main.rs  prove.rs  verify.rs
prover/: Cargo.toml
prover/src/: main.rs
scripts/: README.md  bench.py  benchmark.py  binary_validation_attack.sh  gen.py  generate_time_graphs.py  gkr_attack_suite.sh  gkr_stress_test.sh  infer.py  plot_bench.py  plot_comprehensive_benchmarks.py  plot_performance.py  run_attacks.sh
verifier/: Cargo.toml
verifier/src/: main.rs
zk_gkr/: Cargo.toml
zk_gkr/src/: lib.rs  merkle_poseidon.rs  mle.rs  proof.rs  sumcheck.rs  transcript.rs
zk_gkr_accel/: Cargo.toml
zk_gkr_accel/benches/: gkr_backends.rs
zk_gkr_accel/src/: backend.rs  context.rs  cpu_avx.rs  cuda.rs  error.rs  lib.rs
zk_gkr_accel/tests/: integration_tests.rs
