[workspace]
members = ["legacy_matrix_poc", "legacy_matrix_poc/zk_gkr", "cuda_poc"]
resolver = "2"

# Workspace structure:
# - legacy_matrix_poc: Functional GKR implementation (CPU-optimized, proven backup)
#   └── zk_gkr: GKR library (matrix multiplication proofs)
# - cuda_poc: zkCUDA implementation using ExpanderCompilerCollection (GPU-accelerated)
#
# Removed:
# - expander_matrix_poc: Incomplete Expander SDK integration (removed)
# - zk_gkr_accel: Failed acceleration attempt with security issues
