[workspace]
members = [
    "legacy_matrix_poc",
    "legacy_matrix_poc/zk_gkr",
    "cuda_poc",
    "vendor/expander_compiler",
    "vendor/expander_compiler/macros"
]
resolver = "2"

# Workspace structure:
# - legacy_matrix_poc: Functional GKR implementation (CPU-optimized, proven backup)
#   └── zk_gkr: GKR library (matrix multiplication proofs)
# - cuda_poc: zkCUDA implementation using ExpanderCompilerCollection (GPU-accelerated)
#
# Removed:
# - expander_matrix_poc: Incomplete Expander SDK integration (removed)
# - zk_gkr_accel: Failed acceleration attempt with security issues

# Workspace dependencies for expander_compiler
# Using vendored expander_compiler with git dependencies
[workspace.dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
ark-std = "0.4.0"
base64 = "0.22.1"
big-int = "7.0.0"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
ethnum = "1.5.0"
itertools = "0.13.0"
halo2curves = { git = "https://github.com/PolyhedraZK/halo2curves", default-features = false, features = ["bits"] }
hex = "0.4"
num-bigint = "0.4.6"
num_cpus = "1.16.0"
num-traits = "0.2.19"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared_memory = "0.12.4"
sha2 = "0.10.8"
stacker = "0.1.17"
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Expander dependencies - use git with specific revision for compatibility
arith = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d" }
mpi_config = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d" }
gkr_field_config = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d" }
babybear = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d" }
crosslayer_prototype = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d" }
expander_circuit = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d", package = "circuit" }
expander_transcript = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d", package = "transcript" }
expander_binary = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d", package = "bin" }
gkr = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d" }
gf2 = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d" }
mersenne31 = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d" }
goldilocks = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d" }
poly_commit = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d", package = "poly_commit" }
polynomials = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d" }
sumcheck = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d" }
serdes = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d" }
gkr_engine = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d" }
gkr_hashers = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d" }
expander_utils = { git = "https://github.com/PolyhedraZK/Expander", rev = "13f13e563f5df9237a9189106aaf2b297b38421d", package = "utils" }
