[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aggregator"
path = "src/main.rs"

[dependencies]
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-serialize = "0.4"
ark-ff = "0.4"
ark-snark = "0.4"
num-bigint = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
