[package]
name = "circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = "0.4"
ark-ff = "0.4"
ark-relations = "0.4"
ark-r1cs-std = { version = "0.4", default-features = false, features=["std"] }
ark-bn254 = "0.4"
serde = { version = "1", features = ["derive"] }

ark-crypto-primitives = { version = "0.4", features = ["r1cs", "sponge"] }