[package]
name = "expander_matrix_poc"
version = "0.1.0"
edition = "2021"

# Part of parent workspace, removed local workspace declaration

[dependencies]
# Expander SDK for high-performance GKR
# NOTE: Temporarily disabled due to MPI compatibility issues on macOS
# gkr = { git = "https://github.com/PolyhedraZK/Expander.git", package = "gkr" }
# arith = { git = "https://github.com/PolyhedraZK/Expander.git", package = "arith" }
# config_macros = { git = "https://github.com/PolyhedraZK/Expander.git", package = "config_macros" }

# Field arithmetic
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tempfile = "3.0"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
mpi = []  # Optional MPI support

[[example]]
name = "matrix_proof_demo"
required-features = []

[[bench]]
name = "matrix_proof_bench"
harness = false