[package]
name = "legacy_matrix_poc"
version = "0.1.0"
edition = "2021"
description = "Legacy matrix multiplication proof implementation (superseded by expander_matrix_poc)"

[[bin]]
name = "legacy_matrix_poc"
path = "src/main.rs"

[dependencies]
# Legacy dependencies restored for historical reference
# For active development, use expander_matrix_poc instead
zk_gkr = { path = "./zk_gkr" }        # Restored for legacy functionality
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-groth16 = "0.4"
ark-serialize = "0.4"
ark-snark = "0.4"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"
rand_chacha = "0.3"
byteorder = "1.4"
flate2 = "1.0"
sha2 = "0.10"
tempfile = "3.0"
num-bigint = "0.4"
hex = "0.4"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
# Note: Acceleration features removed - use expander_matrix_poc for high performance
# accel = ["zk_gkr_accel"]                    # Removed - deprecated
# accel_cpu_avx = ["accel", "zk_gkr_accel/cpu_avx"]  # Removed - deprecated
# accel_cuda = ["accel", "zk_gkr_accel/cuda"]         # Removed - deprecated
# accel_all = ["accel", "zk_gkr_accel/all_backends"]  # Removed - deprecated