[package]
name = "nova_poc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nova_poc"
path = "src/main.rs"

[dependencies]
circuit = { path = "../circuit" }
engine = { path = "../engine" }
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-groth16 = "0.4"
ark-serialize = "0.4"
ark-snark = "0.4"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"
rand_chacha = "0.3"
byteorder = "1.4"
flate2 = "1.0"
sha2 = "0.10"
tempfile = "3.0"
num-bigint = "0.4"

[dev-dependencies]
tempfile = "3.0"