[package]
name = "nova_poc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nova_poc"
path = "src/main.rs"

[dependencies]
zk_gkr = { path = "../zk_gkr" }
zk_gkr_accel = { path = "../zk_gkr_accel", optional = true }
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-groth16 = "0.4"
ark-serialize = "0.4"
ark-snark = "0.4"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"
rand_chacha = "0.3"
byteorder = "1.4"
flate2 = "1.0"
sha2 = "0.10"
tempfile = "3.0"
num-bigint = "0.4"
hex = "0.4"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
accel = ["zk_gkr_accel"]
accel_cpu_avx = ["accel", "zk_gkr_accel/cpu_avx"]
accel_cuda = ["accel", "zk_gkr_accel/cuda"]
accel_all = ["accel", "zk_gkr_accel/all_backends"]