[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prover"
path = "src/main.rs"

[dependencies]
circuit = { path = "../circuit" }
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-serialize = "0.4"
ark-ff = "0.4"
ark-snark = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"