[package]
name = "zk_gkr_accel"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
ark-ff = "0.4"
ark-bn254 = "0.4"
zk_gkr = { path = "../zk_gkr" }
anyhow = "1.0"
thiserror = "1.0"

# CPU SIMD vectorization
simdeez = { version = "2.0", optional = true }
rayon = "1.8"

# CUDA GPU support
cudarc = { version = "0.12", features = ["f16"], optional = true }
bytemuck = { version = "1.14", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Utilities
log = "0.4"
once_cell = "1.19"
rand = "0.8"

[features]
default = []
cpu_avx = ["simdeez"]
cuda = ["cudarc", "bytemuck"]
all_backends = ["cpu_avx", "cuda"]

[dev-dependencies]
rand = "0.8"
criterion = "0.5"
tempfile = "3.0"

[[bench]]
name = "gkr_backends"
harness = false
required-features = ["all_backends"]