[package]
name = "zk_gkr"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.4", features = ["asm"] }
ark-bn254 = { version = "0.4", features = ["curve"] }
ark-std = "0.4"
ark-serialize = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["crh"] }
sha2 = "0.10"
anyhow = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gkr_bench"
harness = false